--- a/src/app/components/vacantes/lista-vacantes/lista-vacantes.component.html
+++ b/src/app/components/vacantes/lista-vacantes/lista-vacantes.component.html
@@ -1,6 +1,8 @@
+<button [routerLink]="['/crear-vacante']" class="btn btn-success">
+    <i class="fas fa-plus"></i> Crear nueva vacante
+  </button>
 
-
-<div (click)="seleccionar(vacante.id)" class="card text-center mt-5" *ngFor="let vacante of vacantes">
+<div (click)="seleccionar(vacante.id)" class="card text-center mt-5 puntero" *ngFor="let vacante of vacantes">
     <div class="card-header">
         {{vacante.empresa}}
     </div>
