se arreglo un bug que instanciaba las vacantes de forma equivocada

--- a/src/app/components/profesionales/lista-profesionales/lista-profesionales.component.html
+++ b/src/app/components/profesionales/lista-profesionales/lista-profesionales.component.html
@@ -1,7 +1,7 @@
 <button [routerLink]="['/crear-profesional']" class="btn btn-success">
     <i class="fas fa-user-plus"></i> Registrar Profesional
   </button>
-  <button [routerLink]="['/contactar-profesional']" class="btn btn-success">
+<button [routerLink]="['/contactar-profesional']" class="btn btn-primary">
     <i class="fas fa-envelope "></i> Contactar profesional
   </button>
 
