--- a/src/app/components/vacantes/lista-vacantes/lista-vacantes.component.html
+++ b/src/app/components/vacantes/lista-vacantes/lista-vacantes.component.html
@@ -1,7 +1,7 @@
 <button [routerLink]="['/crear-vacante']" class="btn btn-success">
     <i class="fas fa-plus"></i> Crear nueva vacante
   </button>
-<button [routerLink]="['/crear-vacante']" class="btn btn-primary">
+<button [routerLink]="['/vacantes-ocupadas']" class="btn btn-primary">
     <i class="fa fa-newspaper"></i> Vacantes Ocupadas
   </button>
 
