se agregaron fotos para las pruebas y se declaro notificaciones en el modulo y routing principal

--- a/src/app/components/empresas/crear-empresa/crear-empresa.component.html
+++ b/src/app/components/empresas/crear-empresa/crear-empresa.component.html
@@ -41,7 +41,7 @@
 
             <div class="form-group">
                 <label>Imagen</label>
-                <input [(ngModel)]="empresa.foto" name="foto" type="text" class="form-control" placeholder="No disponible" disabled="disable">
+                <input [(ngModel)]="empresa.foto" name="foto" type="text" class="form-control" placeholder="No disponible">
             </div>
 
 
