--- a/src/app/components/notificaciones/crear-notificacion/crear-notificacion.component.html
+++ b/src/app/components/notificaciones/crear-notificacion/crear-notificacion.component.html
@@ -29,7 +29,7 @@
 
             <div class="form-group">
                 <label>Imagen</label>
-                <input [(ngModel)]="notificacion.foto" name="foto" type="text" class="form-control" placeholder="deshabilitado por ahora" disabled="disable">
+                <input [(ngModel)]="notificacion.foto" name="foto" type="text" class="form-control" placeholder="deshabilitado por ahora">
             </div>
 
 
