--- a/src/app/components/profesionales/crear-profesional/crear-profesional.component.html
+++ b/src/app/components/profesionales/crear-profesional/crear-profesional.component.html
@@ -42,6 +42,12 @@
                 <input [(ngModel)]="profesional.contacto" name="contacto" type="text" class="form-control" placeholder="Introducir un metodo de contacto">
             </div>
 
+            <div class="form-group">
+                <label>Foto</label>
+                <input [(ngModel)]="profesional.foto" name="foto" type="text" class="form-control" placeholder="Seleccionar una foto">
+            </div>
+
+
 
             <!--Pendiente el estado-->
 
