se cambio el titulo de bienvenida

--- a/src/app/components/notificaciones/lista-notificaciones/lista-notificaciones.component.html
+++ b/src/app/components/notificaciones/lista-notificaciones/lista-notificaciones.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Bienvenido,<small> Empresa de ejemplo</small></h2>
+    <h2>Bienvenido<small> a Duman-Control</small></h2>
 </div>
 
 
