se arreglo el texto del componente notificacion

--- a/src/app/components/notificaciones/notificacion/notificacion.component.html
+++ b/src/app/components/notificaciones/notificacion/notificacion.component.html
@@ -23,12 +23,12 @@
             </div>
 
             <div class="form-group">
-                <label>Rubro</label>
+                <label>Texto</label>
                 <input [(ngModel)]="notificacion.texto" name="texto" type="text" class="form-control" placeholder="Cambie el texto">
             </div>
 
             <div class="form-group">
-                <label>Telefono</label>
+                <label>Imagen</label>
                 <input [(ngModel)]="notificacion.foto" name="foto" type="text" class="form-control" placeholder="Seleccionar foto">
             </div>
 
